🐛 [DOM tool] Fix flashing effect when highlight overlap dom-element

--- a/src/dom-tools.css
+++ b/src/dom-tools.css
@@ -10,6 +10,8 @@
   }
   ul {
     list-style: none;
+    z-index: 50;
+    position: relative;
   }
 
   li {
